<?xml version="1.0" encoding="utf-8"?>
<navigation android:id="@id/main_nav_graph" app:startDestination="@id/nav_dashboard"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <fragment android:label="@string/dashboard_title" android:name="com.sekai.bank.ui.dashboard.DashboardFragment" android:id="@id/nav_dashboard" />
    <fragment android:label="@string/send_money_title" android:name="com.sekai.bank.ui.send.SendMoneyFragment" android:id="@id/nav_send" />
    <fragment android:label="@string/transactions_title" android:name="com.sekai.bank.ui.transactions.TransactionsFragment" android:id="@id/nav_transactions" />
    <fragment android:label="@string/profile_title" android:name="com.sekai.bank.ui.profile.ProfileFragment" android:id="@id/nav_profile" />
</navigation>