<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/main" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="0.0dip" android:layout_height="0.0dip" android:fillViewport="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="@color/text_on_primary" android:id="@id/app_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="48.0dip" android:text="@string/app_name" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/SekaiText.Title" />
            <TextView android:textColor="@color/text_on_primary" android:id="@id/sekai_subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/sekai_welcome_message" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/app_title" style="@style/SekaiText.Subtitle" />
            <com.google.android.material.card.MaterialCardView android:id="@id/auth_card" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="48.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/sekai_subtitle" style="@style/SekaiCard">
                <LinearLayout android:orientation="vertical" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="24.0sp" android:layout_gravity="center" android:id="@id/title_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/login" style="@style/SekaiText.Title" />
                    <TextView android:layout_gravity="center" android:id="@id/subtitle_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="32.0dip" android:text="@string/login_subtitle" android:textAlignment="center" style="@style/SekaiText.Subtitle" />
                    <com.google.android.material.textfield.TextInputLayout android:id="@id/username_input_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:hint="@string/username" style="@style/SekaiTextInput">
                        <com.google.android.material.textfield.TextInputEditText android:id="@id/username_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:inputType="text" style="@style/SekaiEditText" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout android:id="@id/email_input_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:hint="@string/email" style="@style/SekaiTextInput">
                        <com.google.android.material.textfield.TextInputEditText android:id="@id/email_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:inputType="textEmailAddress" style="@style/SekaiEditText" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout android:id="@id/password_input_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:hint="@string/password" app:endIconMode="password_toggle" style="@style/SekaiTextInput">
                        <com.google.android.material.textfield.TextInputEditText android:id="@id/password_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:inputType="textPassword" style="@style/SekaiEditText" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout android:id="@id/confirm_password_input_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" android:hint="@string/confirm_password" app:endIconMode="password_toggle" style="@style/SekaiTextInput">
                        <com.google.android.material.textfield.TextInputEditText android:id="@id/confirm_password_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:inputType="textPassword" style="@style/SekaiEditText" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <Button android:id="@id/auth_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/login_button" style="@style/SekaiButton.Primary" />
                    <ProgressBar android:layout_gravity="center" android:id="@id/progress_bar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" style="@style/SekaiProgressBar" />
                    <TextView android:textStyle="bold" android:textColor="@color/sekai_pink_primary" android:layout_gravity="center" android:id="@id/switch_mode_text" android:background="?selectableItemBackground" android:padding="12.0dip" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/switch_to_register" style="@style/SekaiText" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>