<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/send_money_title" style="@style/SekaiText.Title" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" android:text="Transfer money to another user securely" style="@style/SekaiText.Subtitle" />
        <com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" style="@style/SekaiCard">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textStyle="bold" android:id="@id/balance_text" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/SekaiText" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/SekaiCard">
            <LinearLayout android:orientation="vertical" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/send_to" style="@style/SekaiText" />
                <com.google.android.material.textfield.TextInputLayout android:id="@id/recipient_input_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:hint="@string/recipient_username" style="@style/SekaiTextInput">
                    <com.google.android.material.textfield.TextInputEditText android:id="@id/recipient_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:inputType="text" style="@style/SekaiEditText" />
                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip">
                    <ProgressBar android:id="@id/recipient_progress_bar" android:visibility="gone" android:layout_width="16.0dip" android:layout_height="16.0dip" android:layout_marginEnd="8.0dip" />
                    <TextView android:textSize="14.0sp" android:id="@id/recipient_status" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/SekaiText" />
                </LinearLayout>
                <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/amount" style="@style/SekaiText" />
                <com.google.android.material.textfield.TextInputLayout android:id="@id/amount_input_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:hint="@string/amount_hint" app:prefixText="@string/currency_symbol" style="@style/SekaiTextInput">
                    <com.google.android.material.textfield.TextInputEditText android:id="@id/amount_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:inputType="numberDecimal" style="@style/SekaiEditText" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/message_optional" style="@style/SekaiText" />
                <com.google.android.material.textfield.TextInputLayout android:id="@id/message_input_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:hint="@string/message_hint" style="@style/SekaiTextInput">
                    <com.google.android.material.textfield.TextInputEditText android:id="@id/message_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="3" android:inputType="textCapSentences|textMultiLine" style="@style/SekaiEditText" />
                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip">
                    <com.google.android.material.checkbox.MaterialCheckBox android:textColor="@color/text_primary" android:id="@id/schedule_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Schedule for later" />
                    <LinearLayout android:orientation="horizontal" android:id="@id/schedule_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
                        <Button android:id="@id/date_picker_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="Select Date" android:layout_weight="1.0" android:textAllCaps="false" android:layout_marginEnd="8.0dip" style="@style/Widget.Material3.Button.OutlinedButton" />
                        <Button android:id="@id/time_picker_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="Select Time" android:layout_weight="1.0" android:textAllCaps="false" style="@style/Widget.Material3.Button.OutlinedButton" />
                    </LinearLayout>
                </LinearLayout>
                <ProgressBar android:layout_gravity="center" android:id="@id/progress_bar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" style="@style/SekaiProgressBar" />
                <Button android:id="@id/send_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/send_button" style="@style/SekaiButton.Primary" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>